@@ -2,6 +2,11 @@ django-sitemessage changelog
 ============================
 
 
+Unreleased
+----------
+* Django 1.11 compatibility improvements.
+
+
 v0.8.3
 ------
 * Package distribution fix.
